k8s/ingress.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
spec:
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      hostNetwork: true 
      containers:
        - name: controller
          image: registry.k8s.io/ingress-nginx/controller:v1.12.0-beta.0
          ports:
            - containerPort: 80
              hostPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  selector:
    app: ingress-nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo
  namespace: default
spec:
  selector:
    app: k8s-demo
  ports:
    - protocol: TCP
      port: 80        
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-demo-ingress
  namespace: default 
spec:
  ingressClassName: nginx
  rules:
    - host: demo.k8s.marcovogt.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-demo
                port:
                  number: 80
